--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,15 +6,15 @@
     <title>@ViewData["Title"] - Blog_UDLA_PZ_JS_DM</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap5.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Blog_UDLA_PZ_JS_DM.styles.css" asp-append-version="true" />
+   @*  <link rel="stylesheet" href="~/Blog_UDLA_PZ_JS_DM.styles.css" asp-append-version="true" /> *@
 </head>
 <body>
     <header>
 
        @*  Bootswatch *@
         <nav class="navbar navbar-expand-lg bg-primary" data-bs-theme="dark">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+            <div class="container">
+                <a class="navbar-brand" href="#">Navegación Administrador</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
