--- a/Areas/Admin/Views/Categorias/Index.cshtml
+++ b/Areas/Admin/Views/Categorias/Index.cshtml
@@ -4,12 +4,13 @@
             <h2 class="text-primary">Lista de Categorías</h2>
         </div>
         <div class="col-4 text-right">
-            <a asp-action="Create" class="btn btn-primary"><i i class="fa-solid fa-plus"></i>Crear Nueva Categoría</a>
+            <a asp-action="Create" class="btn btn-primary"><i  class="fa-solid fa-plus"></i> Crear Nueva Categoría</a>
         </div>
     </div>
 
     <br />
     <br />
+
     <table id="tblCategorias" class="table table-striped table-bordered" style="width: 100%">
         <thead>
             <tr>
