Errores corregidos, funciona crear categoria

--- a/Areas/Admin/Views/Categorias/Create.cshtml
+++ b/Areas/Admin/Views/Categorias/Create.cshtml
@@ -17,7 +17,7 @@
                     <label asp-for="Nombre"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Nombre" class="form-control" placeholder="Ingresa el nombre"/>
+                    <input asp-for="Nombre" class="form-control" placeholder="Ingresa el nombre" />
                     <span asp-validation-for="Nombre" class="tex-danger"></span>
                 </div>
             </div>
@@ -30,7 +30,7 @@
                     <label asp-for="Orden"></label>
                 </div>
                 <div class="col-8">
-                    <input asp-for="Orden" class="form-control" placeholder="Ingresa el orden" />
+                    <input asp-for="Orden" class="form-control" placeholder="Ingresa el norden" />
                     <span asp-validation-for="Orden" class="tex-danger"></span>
                 </div>
             </div>
