Funcionalidad editar categoria añadida. No hay errores

--- a/Areas/Admin/Views/Categorias/Edit.cshtml
+++ b/Areas/Admin/Views/Categorias/Edit.cshtml
@@ -6,8 +6,8 @@
 
 <br />
 <br />
-<h3 class="text-center">Crear una nueva categoría</h3>
-<form method="POST" asp-action="Create">
+<h3 class="text-center">Editar categoría</h3>
+<form method="POST" asp-action="Edit">
     <div class="row px-2 offset-1 border">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
@@ -23,7 +23,7 @@
             </div>
 
             <br />
-            
+
 
             <div class="form-group row">
                 <div class="col-4">
@@ -36,13 +36,18 @@
             </div>
 
             <br />
-            
 
-            <div class="form-group-row">
-                <div class="col-8">
-                    <partial name="_VistaCrearVolver" />
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary form-control">Aceptar</button>
+                </div>
+                &nbsp;
+                <div class="col">
+                    <a asp-action="Index" class="btn btn-success form-control">Volver atrás</a>
                 </div>
             </div>
+
+            
 
         </div>
     </div>
