--- a/Areas/Admin/Views/Categorias/Create.cshtml
+++ b/Areas/Admin/Views/Categorias/Create.cshtml
@@ -9,7 +9,7 @@
 <h3 class="text-center">Crear una nueva categoría</h3>
 <form method="POST" asp-action="Create">
     <div class="row px-2 offset-1 border">
-        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <div asp-validation-summary="All" class="text-danger"></div>
 
         <div class="col-10 offset-1 mt-4">
             <div class="form-group row">
@@ -18,7 +18,7 @@
                 </div>
                 <div class="col-8">
                     <input asp-for="Nombre" class="form-control" placeholder="Ingresa el nombre" />
-                    <span asp-validation-for="Nombre" class="tex-danger"></span>
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
                 </div>
             </div>
 
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-8">
                     <input asp-for="Orden" class="form-control" placeholder="Ingresa el orden" />
-                    <span asp-validation-for="Orden" class="tex-danger"></span>
+                    <span asp-validation-for="Orden" class="text-danger"></span>
                 </div>
             </div>
 
