--- a/Areas/Admin/Views/Articulos/Index.cshtml
+++ b/Areas/Admin/Views/Articulos/Index.cshtml
@@ -8,7 +8,7 @@
             <h2 class="text-primary">Lista de Artículos</h2>
         </div>
         <div class="col-4 text-right">
-            <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Agregar Nuevo Artículo</a>
+            <a asp-action="Create" class="btn btn-primary"><i class="fa-solid fa-plus"></i> Crear Nuevo Artículo</a>
         </div>
 
     </div>
