--- a/Areas/Admin/Views/Articulos/Create.cshtml
+++ b/Areas/Admin/Views/Articulos/Create.cshtml
@@ -7,7 +7,7 @@
 <br />
 <br />
 <h3 class="text-center">Crear un nuevo Artículo</h3>
-<form method="POST" asp-action="Create">
+<form method="POST" asp-action="Create" enctype="multipart/form-data">
     <div class="row px-2 offset-1 border">
         <div asp-validation-summary="All" class="text-danger"></div>
 
@@ -44,6 +44,17 @@
                     "-Por favor seleccione una categoría-", new { @class = "form-control"})
                     <span asp-validation-for="Articulo.CategoriaId" class="text-danger"></span>
 
+                </div>
+            </div>
+            <br />
+
+            <div class="form-group row">
+                <div class="col-4">
+                    <label asp-for="Articulo.UrlImagen"></label>
+                </div>
+                <div class="col-8">
+                    <input type="file" name="archivos" id="subidaArchivo" class="form-control" />
+                    <span asp-validation-for="Articulo.UrlImagen" class="text-danger"></span>
                 </div>
             </div>
 
