Funcionalidad editar articulos aniadida

--- a/Areas/Admin/Views/Articulos/Edit.cshtml
+++ b/Areas/Admin/Views/Articulos/Edit.cshtml
@@ -1,17 +1,20 @@
 ﻿@model BlogUDLA.Models.ViewModels.ArticuloVM
 
 @{
-    ViewData["Title"] = "Crear Artículo";
+    ViewData["Title"] = "Editar Artículo";
 }
 
 <br />
 <br />
-<h3 class="text-center">Crear un nuevo Artículo</h3>
-<form method="POST" asp-action="Create" enctype="multipart/form-data">
-    <div class="row px-2 offset-1 border">
+<h3 class="text-center">Editar un Artículo</h3>
+<form method="POST" asp-action="Edit" enctype="multipart/form-data">
+    @* Enviar el ID *@
+    <input type="hidden" asp-for="Articulo.Id"/>
+
+    <div class="row px-2 border">
         <div asp-validation-summary="All" class="text-danger"></div>
 
-        <div class="col-10 offset-1 mt-4">
+        <div class="col-8  mt-4">
             <div class="form-group row">
                 <div class="col-4">
                     <label asp-for="Articulo.Nombre"></label>
@@ -41,7 +44,7 @@
                 </div>
                 <div class="col-8">
                     @Html.DropDownListFor(m => m.Articulo.CategoriaId, Model.ListaCategorias,
-                    "-Por favor seleccione una categoría-", new { @class = "form-control"})
+                             "-Por favor seleccione una categoría-", new { @class = "form-control" })
                     <span asp-validation-for="Articulo.CategoriaId" class="text-danger"></span>
 
                 </div>
@@ -61,12 +64,20 @@
             <br />
 
 
-            <div class="form-group-row">
-                <div class="col-8">
-                    <partial name="_VistaCrearVolver" />
+            <div class="row">
+                <div class="col">
+                    <button type="submit" class="btn btn-primary form-control">Editar Artículo</button>
+                </div>
+                &nbsp;
+                <div class="col">
+                    <a asp-action="Index" class="btn btn-success form-control">Volver atrás</a>
                 </div>
             </div>
 
+        </div>
+
+        <div class="col-4 pt-3">
+            <img src="@Model.Articulo.UrlImagen" width="300px" style="border-radius:5px; border:1px solid #bbb9b9"/>
         </div>
     </div>
 
