--- a/Areas/Admin/Views/Articulos/Index.cshtml
+++ b/Areas/Admin/Views/Articulos/Index.cshtml
@@ -22,6 +22,7 @@
                 <th>Id</th>
                 <th>Nombre</th>
                 <th>Categoría</th>
+                <th>Imagen</th>
                 <th>Fecha de Creación</th>
                 <th>Acciones</th>
             </tr>
